# next-plaid

./: Cargo.toml  README.md
.claude-plugin/: marketplace.json
.github/workflows/: update-homebrew-tap.yml
colgrep/: Cargo.toml  README.md
colgrep/python-sdk/: Cargo.toml  pyproject.toml
colgrep/python-sdk/python/colgrep_parser/: __init__.py
colgrep/src/: cli.rs  color.rs  config.rs  display.rs  lib.rs  main.rs  onnx_runtime.rs  ranking.rs  scoring.rs
colgrep/src/commands/: config.rs  init.rs  search.rs  status.rs
colgrep/src/index/: mod.rs  paths.rs
colgrep/src/install/: codex.rs  marketplace.json  plugin.json
colgrep/src/parser/: analysis.rs  ast.rs  extract.rs  language.rs  mod.rs  test_core.rs  types.rs
colgrep/src/parser/tests/: common.rs  mod.rs  test_bash.rs  test_cmake.rs  test_dart.rs  test_graphql.rs  test_groovy.rs  test_ini.rs  test_powershell.rs  test_proto.rs  test_rust.rs  test_starlark.rs  test_terraform.rs
next-plaid/: Cargo.toml
next-plaid-api/: Cargo.toml  README.md
next-plaid-api/python-sdk/: pyproject.toml
next-plaid-api/python-sdk/next_plaid_client/: __init__.py
next-plaid-api/src/: main.rs  tracing_middleware.rs
next-plaid-onnx/python/: pyproject.toml
next-plaid-onnx/python/src/colbert_export/: __init__.py  cli.py
next-plaid-onnx/python/tests/: test_cli.py
next-plaid-onnx/src/: lib.rs
next-plaid/src/: codec.rs  delete.rs  filtering.rs  index.rs  kmeans.rs  lib.rs  text_search.rs
next-plaid/tests/: fts_delete_bench.rs  fts_integration.rs  metadata_delete_bench.rs
