[package]
name = "next-plaid-api"
version.workspace = true
edition = "2021"
description = "REST API for next-plaid multi-vector search"
license.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = false

[dependencies]
# Core next-plaid library
next-plaid = { path = "../next-plaid" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arrays
ndarray = { version = "0.16", features = [
    "serde",
] } # pinned: must match main crate

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
base64 = "0.22"
sysinfo = "0.33"
arc-swap = "1.7"

# Model support (optional)
next-plaid-onnx = { path = "../next-plaid-onnx", optional = true }

# Rate limiting
tower_governor = "0.8"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = []
openblas = ["next-plaid/openblas"]
accelerate = ["next-plaid/accelerate"]
mkl = ["next-plaid/mkl"]
metal_gpu = ["next-plaid/metal_gpu"]
model = ["dep:next-plaid-onnx"]
# CUDA acceleration — pick the major matching the host, don't enable both.
#   * `cuda`    -> CUDA 11.8 / 12.x  (default, unchanged behaviour)
#   * `cuda-13` -> CUDA 13.x
cuda = ["model", "next-plaid-onnx/cuda", "next-plaid/cuda"]
cuda-13 = ["model", "next-plaid-onnx/cuda", "next-plaid/cuda-13"]

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
ndarray-rand = "0.15"                               # pinned: must match main crate
tempfile = "3.15"
rand = "0.8"                                        # pinned: must match main crate

[[bin]]
name = "next-plaid-api"
path = "src/main.rs"
