[package]
name = "next-plaid"
version.workspace = true
edition.workspace = true
description = "CPU-based PLAID implementation for multi-vector search using ndarray"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["search", "multi-vector", "plaid", "colbert", "ndarray"]
categories = ["science", "algorithms"]

[dependencies]
ndarray = { workspace = true }
blas-src = { version = "0.14", optional = true }
openblas-src = { version = "0.10", features = [
    "cblas",
    "system",
], optional = true }
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-seq"], optional = true }
ndarray-rand = "0.15"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
num-traits = "0.2"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ndarray-npy = "0.9.1"
fastkmeans-rs = "1.0.7"
memmap2 = "0.9"
fs2 = "0.4"
half = "2.4"
byteorder = "1.5"
rusqlite = { version = "0.38", features = ["bundled", "functions"] }
regex = "1.11"
# `fancy-regex` powers the SQLite REGEXP UDF so chunk filtering supports
# lookaround and backreferences in addition to the standard regex syntax.
fancy-regex = "0.13"
# The CUDA major-version binding (`cuda-11080` / `cuda-13000`) is selected by
# the `cuda` / `cuda-13` features below, not pinned here — cudarc binds a single
# CUDA major at compile time.
cudarc = { version = "0.19", default-features = false, features = [
    "cublas",
    "dynamic-loading",
    "nvrtc",
], optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
approx = "0.5"
tempfile = "3.10"

[features]
default = []
accelerate = [
    "blas-src",
    "accelerate-src",
    "ndarray/blas",
    "fastkmeans-rs/accelerate",
]
openblas = [
    "blas-src",
    "openblas-src",
    "ndarray/blas",
    "fastkmeans-rs/openblas",
]
mkl = [
    "blas-src",
    "intel-mkl-src",
    "ndarray/blas",
    "fastkmeans-rs/mkl",
]
metal_gpu = ["fastkmeans-rs/metal_gpu"]
# CUDA acceleration. cudarc binds one CUDA major at compile time, so pick the
# one matching the target host and DO NOT enable both:
#   * `cuda`    -> CUDA 11.8 / 12.x  (default, unchanged behaviour)
#   * `cuda-13` -> CUDA 13.x
cuda = ["_cuda", "fastkmeans-rs/cuda", "cudarc/cuda-11080"]
cuda-13 = ["_cuda", "fastkmeans-rs/cuda-13", "cudarc/cuda-13000"]
# Internal: pulls in cudarc + gates the CUDA code. Always go through `cuda` or
# `cuda-13` (which also select the cudarc version); don't enable this directly.
_cuda = ["dep:cudarc"]
