[package]
name = "colgrep-parser"
version = "1.5.2"
edition = "2021"
description = "Python bindings for colgrep code parser"
license = "Apache-2.0"
repository = "https://github.com/lightonai/next-plaid"

# Exclude from parent workspace
[workspace]

[lib]
name = "colgrep_parser"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Use colgrep for all parsing and embedding logic
colgrep = { path = ".." }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
