[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "colgrep-parser"
version = "1.6.0"
description = "Python bindings for colgrep code parser - extract functions, classes, and code structure from source files"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["parser", "code-analysis", "tree-sitter", "ast"]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/lightonai/next-plaid"
Repository = "https://github.com/lightonai/next-plaid"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "colgrep_parser._core"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []
