[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "next-plaid-client"
version = "1.3.1"
description = "Python SDK for the Next Plaid ColBERT Search API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [
    { name = "Raphael Sourty, LightOn", email = "raphael.sourty@lighton.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
cli = ["click>=8.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-asyncio>=0.21.0", "click>=8.0.0"]

[project.scripts]
next-plaid = "next_plaid_client.cli:main"

[project.urls]
Homepage = "https://github.com/lightonai/next-plaid"
Documentation = "https://github.com/lightonai/next-plaid"
Repository = "https://github.com/lightonai/next-plaid"

[tool.setuptools.packages.find]
include = ["next_plaid_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["next_plaid_client"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
